# torch_tm_flowpipe

./: .gitignore  README.md  pyproject.toml
docs/: algorithm.md  batched_dense_gpu_b_line_report.md  batched_dense_tm_prototype_notes.md  flowstar_accepted_step_trace_plan.md  flowstar_adaptive_step_policy_audit.md  flowstar_archeology_boundary_report.md  flowstar_benchmark_parity.md  flowstar_comparison.md  flowstar_horner_insertion_source_map.md  flowstar_kernel_alignment_notes.md  flowstar_local_plot_width_patch_inventory.md  flowstar_normalized_insertion_source_map.md  flowstar_raw_remainder_compat_plan.md  flowstar_right_map_scaling_source_map.md  flowstar_source_queue_semantics_audit.md  flowstar_source_rescue_notes.md  flowstar_step_trace_divergence_report.md  flowstar_symbolic_queue_v2_audit_conclusion.md  flowstar_symbolic_queue_v2_notes.md  flowstar_symbolic_remainder_semantics_map.md  flowstar_vanderpol_pytorch_diagnostics_conclusion.md  flowstar_vdp_width_trajectory_audit_plan.md  flowstar_width_control_source_map.md  gpu_strategy_reality_check.md  limitations.md  order_and_vdp_diagnostics.md  order_and_vdp_flowstar_report.md  technical_validation.md  trajectory_visual_audit.md
examples/: affine_controlled.py  scalar_quadratic.py  van_der_pol_short.py
experiments/: _common.py  batched_dense_many_box_flowpipe_demo.py  batched_dense_nncs_demo.py  batched_dense_tm_flowpipe_demo.py  batched_tm_gpu_microbench.py  diagnose_van_der_pol.py  flowstar_acceptance_predicate_audit.py  flowstar_benchmark_failure_diagnostics.py  flowstar_benchmark_parity.py  (+37 more)
(+538 files in other folders)
