[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torch-tm-flowpipe"
version = "0.1.0"
description = "Minimal PyTorch-native Taylor model flowpipe prototype for polynomial NNCS plant dynamics."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["torch", "PyYAML", "matplotlib"]

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
